fix(CSS): "disabled" attribute selector (fixes #7224)

--- a/src/components/avatar/_avatar.scss
+++ b/src/components/avatar/_avatar.scss
@@ -141,7 +141,7 @@
 
   a,
   .btn {
-    &.b-avatar:hover:not(.disabled):not(disabled) {
+    &.b-avatar:hover:not(.disabled):not([disabled]) {
       z-index: 1;
     }
   }
